# data-contract-copilot

./: .env.example  .gitignore  .gitignore copy  Home.py  README.md  gx_rule_generator.ipynb  pyproject.toml  requirements.txt
data/: orders.csv  orders.md  orders_invalid.csv
examples/: examples_expectation_manager.py  test_expectation_manager.py
output/: llm_prompt.txt  modified_gx_configuration.yaml  prompt_data.json  validated_llm_suite.yaml
pages/: Generate_Configuration.py  Generate_Data_Contract.py  Load_Configuration.py  Test_Data_Contract.py
src/: expectation_manager.py  expectations.py  gx_data_extractor.py  gx_promt_utils.py  gx_utils.py
