[project]
name = "gx-rule-generator"
version = "0.1.0"
description = ""
authors = [
    {name = "Enrique González",email = "enrique.grodrigo@gmail.com"}
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "great-expectations (>=1.6.2,<2.0.0)",
    "duckdb (>=1.4.0,<2.0.0)",
    "openai (>=1.108.1,<2.0.0)",
    "pydantic (>=2.11.9,<3.0.0)",
    "instructor (>=1.11.3,<2.0.0)",
    "fastmcp (>=2.12.3,<3.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=6.30.1,<7.0.0)",
    "notebook (>=7.4.5,<8.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "numpy (<2.0)",
    "pandas (==2.1.4)",
    "pyyaml (>=6.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

